# slackbot

./: .gitignore  Cargo.toml  eightball.ini
src/: logger.rs  main.rs  plugin.rs  settings.rs
src/dict-gen/: main.rs
src/dictionary/: lib.rs
src/plugins/: echo.rs  eightball.rs  logging.rs  mod.rs  patterns.rs  randomchat.rs
